k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: snake
spec:
  clusterIP: None
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
